--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "@types/express": "^4.17.21",
     "ejs": "^3.1.10",
     "express": "^4.19.2"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.4"
   }
 }
