--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@types/express": "^4.17.21",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
-    "nodemon": "^3.1.4"
+    "typescript": "^5.5.3"
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.4"
+    "tailwindcss": "^3.4.4",
+    "nodemon": "^3.1.4",
+    "ts-watch": "^1.0.8"
   }
 }
