--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-    "include": ["./src", "src/routes/routes.ts"],
+    "include": ["./src"],
     "compilerOptions": {
       "incremental": true,
       "target": "ES6",
