--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon",
-    "build-css": "npx tailwindcss -i ./public/css/input.css -o ./public/css/output.css --watch",
-    "build": "tsc -w"
+    "build": "vercel build"
   },
   "keywords": [],
   "author": "",
