--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
-    "include": ["./src"],
+    "include": ["src"],
+    "exclude": ["node_modules"],
     "compilerOptions": {
       "incremental": true,
       "target": "ES6",
@@ -7,6 +8,7 @@
       "resolveJsonModule": true, // To import Json module
       "sourceMap": true,
       "outDir": "./dist",
+      "rootDir": "./src",
       "removeComments": true,
       "strict": true,
       "noUnusedLocals": true,
