--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "./dist/gameSpot.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon",
+    "start": "node dist/gameSpot.js",
+    "dev" :  "nodemon",
     "build": "tsc"
   },
   "keywords": [],
